# homnitor-dpbo

./: meson.build  org.gtk.ver1.json
data/: meson.build  org.gtk.ver1.appdata.xml.in  org.gtk.ver1.desktop.in  org.gtk.ver1.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  data.css  data.ui  data.vala  gtk_app.gresource.xml  main.vala  meson.build  ref.vala  setor.txt  style.css  window.ui  window.vala
